@@ -1,7 +1,7 @@
 Package: frenchFISH
 Type: Package
 Title: Poisson Models for Quantifying DNA Copy-number from FISH Images of Tissue Sections
-Version: 0.99.6
+Version: 0.99.7
 Author: Adam Berman, Geoff Macintyre
 Maintainer: Adam Berman <agb61@cam.ac.uk>
 Description: FrenchFISH comprises a nuclear volume correction 
@@ -12,6 +12,7 @@ Description: FrenchFISH comprises a nuclear volume correction
 License: Artistic-2.0
 Encoding: UTF-8
 Imports: 
+    utils, 
     MCMCpack, 
     NHPoisson
 RoxygenNote: 7.0.2
