@@ -1,4 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+importFrom("utils", "read.csv")
+export(convertFishalyserCsvToCountMatrix)
 export(getAutomaticCountsEstimates)
 export(getManualCountsEstimates)
