@@ -1,0 +1,45 @@
+"filename","nucleus ID","eccentricity","num of R probes","num of G probes","R1 R2","R1 R3","R2 R3","R1 G1","R1 G2","R1 G3","R2 G1","R2 G2","R2 G3","R3 G1","R3 G2","R3 G3","G1 G2","G1 G3","G2 G3","X center of mass","Y center of mass","area of nucleus","perimeter of nucleus","radius of nucleus","AR1","AR2","AR3","AG1","AG2","AG3"
+"SampleFISH.jpg.png",1,0.609201295275901,2,2,20.2237484161567,NA,NA,0,19.6468827043885,NA,18.3847763108502,0,NA,NA,NA,NA,18.3575597506858,NA,NA,514.290801186944,41.7645895153314,4044,227,35.8020601546826,14,16,NA,11,6,NA
+"SampleFISH.jpg.png",2,0.506223705908721,3,3,2,32.2800247831379,29.732137494637,15,22.4722050542442,26.9258240356725,12.0415945787923,20.1246117974981,24.5967477524977,13.8924439894498,7,4,5.65685424949238,9.21954445729289,1.4142135623731,128.319383259912,68.1719897209985,10896,329,58.6296887524215,9,13,17,16,12,10
+"SampleFISH.jpg.png",3,0.617567219903839,1,2,NA,NA,NA,24.1867732448956,0,NA,NA,NA,NA,NA,NA,NA,19.2353840616713,NA,NA,270.763428571429,72.526693877551,6125,248,43.906279436149,19,NA,NA,20,19,NA
+"SampleFISH.jpg.png",4,0.984214935868825,0,0,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,3.59375,90.0625,96,56,7.35602558898039,NA,NA,NA,NA,NA,NA
+"SampleFISH.jpg.png",5,0.58194927076087,1,2,NA,NA,NA,29.732137494637,6.70820393249937,NA,NA,NA,NA,NA,NA,NA,21.0237960416286,NA,NA,358.695919044459,129.219475779695,6028,248,43.5013713850538,18,NA,NA,7,10,NA
+"SampleFISH.jpg.png",6,0.678323151097588,0,0,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,15.8456464379947,120.435356200528,758,113,15.769137958484,NA,NA,NA,NA,NA,NA
+"SampleFISH.jpg.png",7,0.587639417405665,1,2,NA,NA,NA,80.802227692063,46.1410879802373,NA,NA,NA,NA,NA,NA,NA,74.6726188103779,NA,NA,590.986953184958,157.877718086467,7818,282,49.6409102313026,2,NA,NA,18,14,NA
+"SampleFISH.jpg.png",8,0.36223284037592,1,2,NA,NA,NA,34,10,NA,NA,NA,NA,NA,NA,NA,20.6155281280883,NA,NA,732.357012750455,167.015873015873,7686,293,49.0236317957839,16,NA,NA,20,20,NA
+"SampleFISH.jpg.png",9,0.366397667918261,0,0,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,226.633956386293,150.92484423676,2568,157,28.2315470586684,NA,NA,NA,NA,NA,NA
+"SampleFISH.jpg.png",10,0.620353057344872,1,2,NA,NA,NA,5,47.7074417675063,NA,NA,NA,NA,NA,NA,NA,50.5667875190821,NA,NA,451.602986932172,219.140168014935,6428,262,44.8905510140564,9,NA,NA,8,6,NA
+"SampleFISH.jpg.png",11,0.549493834783302,2,2,10,NA,NA,4,19.313207915828,NA,3,8.06225774829855,NA,NA,NA,NA,12.5299640861417,NA,NA,149.864363073749,224.766890149562,5817,242,42.6614962476802,15,17,NA,15,13,NA
+"SampleFISH.jpg.png",12,0.636934644813123,0,1,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,301.062735595046,244.917339795369,7428,278,48.3855529003321,NA,NA,NA,19,NA,NA
+"SampleFISH.jpg.png",13,0.630926147784838,2,2,7.21110255092798,NA,NA,22.0227155455452,7.61577310586391,NA,14.142135623731,0,NA,NA,NA,NA,13.0384048104053,NA,NA,560.252935082873,257.790745856354,5792,252,43.0729739668971,12,9,NA,10,6,NA
+"SampleFISH.jpg.png",14,0.671814200949518,2,2,21.2602916254693,NA,NA,17.4928556845359,22.2036033111745,NA,1.4142135623731,8.54400374531753,NA,NA,NA,NA,6.40312423743285,NA,NA,682.71295893194,283.960092874764,6891,277,46.7682957378878,10,13,NA,12,9,NA
+"SampleFISH.jpg.png",15,0.622563579375025,2,2,57.4282160614449,NA,NA,6,43,NA,49.8196748283246,12.5299640861417,NA,NA,NA,NA,35.0142828000232,NA,NA,461.264398314344,330.791009832995,6407,256,44.9178269008679,8,6,NA,10,14,NA
+"SampleFISH.jpg.png",16,0.748820049872972,2,2,42,NA,NA,0,41.7731971484108,NA,40.0499687890016,5,NA,NA,NA,NA,40.2616442783948,NA,NA,30.1126791620728,341.809261300992,4535,232,38.0354778125647,7,8,NA,9,9,NA
+"SampleFISH.jpg.png",17,0.463100730009344,0,3,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,5,45.254833995939,38.2883794381533,195.281821259309,346.802301963439,5908,241,42.9700208899236,NA,NA,NA,12,11,20
+"SampleFISH.jpg.png",18,0.419026800057435,3,2,42.485291572496,42.9534631898291,1.4142135623731,27.7308492477241,39.8246155034798,NA,11.7046999107196,6.40312423743285,NA,12.369316876853,8.48528137423857,NA,10.295630140987,NA,NA,631.206825938567,346.953583617747,2930,169,30.1485738025002,15,2,1,11,11,NA
+"SampleFISH.jpg.png",19,0.422339940908146,2,2,33.3016516106934,NA,NA,8.06225774829855,29.8328677803526,NA,25,0,NA,NA,NA,NA,21.4009345590327,NA,NA,336.636291809323,394.341322096392,3797,193,34.3930434960872,12,14,NA,7,12,NA
+"SampleFISH.jpg.png",20,0.722968697355289,3,3,12.0415945787923,29.1204395571221,16,16.1554944214035,25.298221281347,30.4138126514911,31.6227766016838,23.43074902772,24.0831891575846,45,39.3954312071844,16.0312195418814,43,39.0512483795333,51.0881590977792,725.291794750532,438.334476235517,8458,347,52.6538249655383,16,11,9,13,12,9
+"SampleFISH.jpg.png",21,0.586599668329625,3,3,5.3851648071345,60.1082357085949,64.0312423743285,2,42.2018956920184,NA,8.48528137423857,6,45.254833995939,63.7024332345319,55.9732078766261,17,7,46.3249392876019,37.6430604494374,109.94798556825,426.455351773903,6652,289,45.5634416169016,11,14,10,14,9,10
+"SampleFISH.jpg.png",22,0.474105690992121,2,2,28.1780056072107,NA,NA,2.82842712474619,27.7308492477241,NA,22.4722050542442,0,NA,NA,NA,NA,22.1359436211787,NA,NA,508.39146491588,424.468814115716,4874,226,38.9879748398349,10,12,NA,13,14,NA
+"SampleFISH.jpg.png",23,0.554814776488189,2,2,42.190046219458,NA,NA,0,38.4707681233427,NA,42.190046219458,1,NA,NA,NA,NA,38.4707681233427,NA,NA,284.811038353601,479.951356407858,4276,211,36.5545810412612,9,6,NA,12,9,NA
+"SampleFISH.jpg.png",24,0.639064782825622,2,2,11.1803398874989,NA,NA,9.4339811320566,37.0540146272978,NA,9.21954445729289,24,NA,NA,NA,NA,28.7923600977759,NA,NA,537.007358790772,489.674224343675,5028,249,39.8746487742999,9,9,NA,8,12,NA
+"SampleFISH.jpg.png",25,0.465050819451532,2,2,42.0119030752,NA,NA,42.154477816716,42.2965719651132,NA,8.54400374531753,33.5410196624968,NA,NA,NA,NA,23.0217288664427,NA,NA,640.827902790279,490.378577857786,5555,244,41.6035734667304,11,13,NA,8,11,NA
+"SampleFISH.jpg.png",26,0.497214542055373,2,2,29.698484809835,NA,NA,2.23606797749979,34.4093010681705,NA,36.7695526217005,3,NA,NA,NA,NA,41.2310562561766,NA,NA,389.418236472946,492.874749498998,4990,225,39.4988950704043,20,18,NA,19,19,NA
+"SampleFISH.jpg.png",27,0.521488943050553,2,3,14.3178210632764,NA,NA,6.08276253029822,7.21110255092798,29.4278779391243,13.0384048104053,10.1980390271856,11.0453610171873,NA,NA,NA,2,28.0178514522438,25.0798724079689,131.842799366977,500.886935115175,5687,279,41.8950068399166,12,17,NA,5,5,13
+"SampleFISH.jpg.png",28,0.870259243695488,0,0,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,777.876582278481,502.677215189873,632,111,15.4562092156564,NA,NA,NA,NA,NA,NA
+"SampleFISH.jpg.png",29,0.89553031991638,0,0,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,20.7439549519709,555.539913878768,3019,220,32.474377596654,NA,NA,NA,NA,NA,NA
+"SampleFISH.jpg.png",30,0.524916823443976,2,2,43.6806593356831,NA,NA,1,33.6005952328229,NA,41,23.0217288664427,NA,NA,NA,NA,30,NA,NA,492.142505277973,555.142505277973,5684,242,42.1530995515122,2,11,NA,8,10,NA
+"SampleFISH.jpg.png",31,0.654377403476274,2,2,43.139309220246,NA,NA,9.48683298050514,46.5295604965274,NA,57.3846669416143,9.21954445729289,NA,NA,NA,NA,61.2943716828878,NA,NA,352.65110876452,581.365575501584,4735,217,38.7141634267312,19,12,NA,10,9,NA
+"SampleFISH.jpg.png",32,0.718578153867345,2,0,13.0384048104053,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,232.713469148468,599.780301919977,6823,270,46.7040419343844,2,15,NA,NA,NA,NA
+"SampleFISH.jpg.png",33,0.543752578161576,2,2,29,NA,NA,6,25.4950975679639,NA,38,2.23606797749979,NA,NA,NA,NA,34.0587727318528,NA,NA,623.360121304018,590.925701288855,2638,185,28.626453516002,15,13,NA,18,18,NA
+"SampleFISH.jpg.png",34,0.741533528358538,3,1,33.2415402771893,33.9558536926993,1.4142135623731,10.770329614269,NA,NA,48.0832611206852,NA,NA,48.7647413609464,NA,NA,NA,NA,NA,134.342707161605,601.626921634796,2667,165,29.1503203706756,20,2,1,17,NA,NA
+"SampleFISH.jpg.png",35,0.567185554716609,2,2,64.5135644651572,NA,NA,9.21954445729289,62.393909959226,NA,64.9384323802169,2.23606797749979,NA,NA,NA,NA,62.3698645180507,NA,NA,589.241359556998,661.499713576475,5237,238,40.4918998229633,9,5,NA,7,4,NA
+"SampleFISH.jpg.png",36,0.603965574144242,3,2,29.0688837074973,34,6.32455532033676,1.4142135623731,38.4707681233427,NA,30.8058436014987,13.1529464379659,NA,36.2491379207837,19.4164878389476,NA,38.8329756778952,NA,NA,410.414936954413,675.771290009699,5155,230,40.1415496971046,12,9,8,10,9,NA
+"SampleFISH.jpg.png",37,0.780530887889298,2,2,21.2602916254693,NA,NA,13.4536240470737,21.2132034355964,NA,5,0,NA,NA,NA,NA,5,NA,NA,712.977972141238,705.536119209589,6174,262,44.1847530414355,10,11,NA,8,8,NA
+"SampleFISH.jpg.png",38,0.539956967429416,2,2,40.7062648740952,NA,NA,7,45.5411901469428,NA,33.4215499341368,7.21110255092798,NA,NA,NA,NA,37.1618083521241,NA,NA,255.761280931587,719.88173216885,5496,257,41.4641765459429,9,5,NA,5,8,NA
+"SampleFISH.jpg.png",39,0.414221790194094,1,0,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,511.28731089001,748.736677115988,7337,274,47.9009372728792,10,NA,NA,NA,NA,NA
+"SampleFISH.jpg.png",40,0.379524587834832,0,2,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,10,NA,NA,85.5652607438429,773.383986439326,10029,335,56.0508949459153,NA,NA,NA,15,16,NA
+"SampleFISH.jpg.png",41,0.605452344316566,3,1,47.5184174820669,48.0520551069359,1.4142135623731,46.690470119715,NA,NA,0,NA,NA,0,NA,NA,NA,NA,NA,630.042169728784,783.471391076116,5715,248,42.4545947137852,18,5,18,20,NA,NA
+"SampleFISH.jpg.png",42,0.618907676243895,2,2,39.560080889705,NA,NA,12,42.2965719651132,NA,46.0434577328854,16.1245154965971,NA,NA,NA,NA,42.5793377120875,NA,NA,303.430455868089,800.329000969932,5155,244,40.6154754086632,11,8,NA,6,8,NA
+"SampleFISH.jpg.png",43,0.825520554095731,0,1,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,790.195838656689,825.334002555211,5479,274,42.9226636875118,NA,NA,NA,16,NA,NA
+"SampleFISH.jpg.png",44,0.693498104998056,0,0,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,NA,587.881558441558,834.019220779221,1925,181,24.8556747822237,NA,NA,NA,NA,NA,NA
